--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "author": "Raven Universe Admin",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mongoose": "^9.1.3",
         "socket.io": "^4.7.2"
     },
     "engines": {
