--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^9.1.3",
+        "nodemailer": "^7.0.12",
         "socket.io": "^4.7.2"
     },
     "engines": {
